# Alphax-MIS

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
alphax_mis/: hooks.py  modules.txt
alphax_mis/alphax_mis/doctype/alphax_mis_import_wizard/: alphax_mis_import_wizard.js  alphax_mis_import_wizard.json  alphax_mis_import_wizard.py
alphax_mis/alphax_mis/doctype/ax_mis_allowed_dimension/: ax_mis_allowed_dimension.py
alphax_mis/alphax_mis/doctype/ax_mis_dimension_filter/: ax_mis_dimension_filter.json
alphax_mis/alphax_mis/doctype/ax_mis_report_line/: ax_mis_report_line.py
alphax_mis/alphax_mis/page/alphax_mis_ai/: alphax_mis_ai.json
alphax_mis/alphax_mis/role/: alphax_mis_admin.json
alphax_mis/config/: desktop.py
alphax_mis/doctype/ax_mis_allowed_dimension/: ax_mis_allowed_dimension.json
alphax_mis/doctype/ax_mis_dimension_filter/: ax_mis_dimension_filter.js  ax_mis_dimension_filter.py
alphax_mis/doctype/ax_mis_flag/: ax_mis_flag.json
alphax_mis/doctype/ax_mis_flag_account/: ax_mis_flag_account.json  ax_mis_flag_account.py
alphax_mis/doctype/ax_mis_report_format/: ax_mis_report_format.json  ax_mis_report_format.py
alphax_mis/doctype/ax_mis_report_line/: ax_mis_report_line.json
alphax_mis/doctype/ax_mis_settings/: ax_mis_settings.json  ax_mis_settings.py
alphax_mis/page/alphax_mis_ai/: alphax_mis_ai.js  alphax_mis_ai.py
alphax_mis/report/alphax_mis_report/: alphax_mis_report.json
alphax_mis/role/: alphax_mis_user.json
alphax_mis/utils/: dimensions.py
alphax_mis/workspace/: alphax_mis.json
(+2 files in other folders)
